@@ -13,6 +13,7 @@ python-reahl (4.1) unstable; urgency=low
  * Changed DriverBrowser element getter methods and condition methods to never wait.
  * Changed DriverBrowser interacting methods (like click, type) to iconsistently trigger onchange and wait for ajax by default. 
  * Renamed is_checked, check, and uncheck methods on DriverBrowser to work for radio buttons too.
+ * Changed Table and Column to allow for table footer content in Columns.
 
  -- Iwan Vosloo <iwan@reahl.org>  Thu, 13 Dec 2018 15:15:00 +0200
 
